--- a/ConsoleApp1/A.L1_HW.csproj
+++ b/ConsoleApp1/A.L1_HW.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Circle.cs" />
+    <Compile Include="Tringle.cs" />
+    <Compile Include="Square.cs" />
+    <Compile Include="Shape.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
